# lynlab-auth-rust

./: .dockerignore  .envrc.example  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
docs/: Specification.md
migrations/2018-05-12-082834_create_users/: up.sql
migrations/2018-05-22-100756_user_activate/: down.sql  up.sql
src/: email.rs  main.rs  schema.rs  templates.rs
src/helpers/: api.rs  db.rs  mod.rs  token.rs
src/models/: user.rs
