[package]
name = "lynlab-auth"
version = "0.1.0"
authors = ["Do Hoerin <hellodhlyn@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "0.6"
argon2rs = "0.2"
diesel = { version = "1.2", features = ["mysql"] }
futures = "0.1"
json = "*"
nanoid = "0.2"
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["v4"] }
